start structuring the design

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <p> TESTING HTML FUNCTION</p>
+  <p> TESTING HTML FUNCTION - working so far</p>
 </body>
 </html>
